CommandoAppWithK8/k8Azure/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: commandomicroacr.azurecr.io/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - port: 80
      name: commandservice
      targetPort: 80
