CommandoAppWithK8/k8Azure/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: commandomicroacr.azurecr.io/platformservice:latest
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: platform-lb
spec:
  type: LoadBalancer
  selector:
    app: platformservice
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - port: 80
      name: platformservice
      targetPort: 80
    - name: platformgrpc
      port: 666
      targetPort: 666
